<resources>
    <string name="app_name">Person Register</string>
    <string name="hint_persona">Nombre de Persona</string>
    <string name="hint_balance">Balance</string>
    <string name="guardar">Guardar</string>
    <string name="Persona_Register">Registro de Personas</string>
    <string name="eliminar">Eliminar</string>
    <string name="hint_email">Email</string>
    <string name="hint_ocupacion">Ocupación</string>
    <string name="AgregarOcupación">+ Ocupación</string>
    <string name="ocupaciones_fragment">Ocupaciones</string>
    <string name="Agregar">Agregar Persona</string>
</resources>